# CampusNetGuardian

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  config.rs  guardian.rs  gui.rs  main.rs  network.rs  speedtest.rs  theme.rs  tray.rs
