[package]
name = "campus_net_guardian"
version = "1.0.0"
edition = "2024"
description = "Automated Campus Network Authentication Engine"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.9"
encoding_rs = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
